[#12546] improvement(trino-connector): Report catalog registration status through system tables
Record the registration state of every catalog and the health of the load
loop, and expose both through the gravitino.system.catalog_status and
gravitino.system.load_status system tables. Errors now report the root
cause rather than the outer wrapper.